# rss-reader

./: .editorconfig  .gitignore  README.md  clippy.sh  design.md  example.ompl  rustfmt.toml
.cargo-husky/hooks/: pre-commit
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: tests.yml
crates/client-cli/: Cargo.toml  cli.yml
crates/client-cli/src/: main.rs
crates/daemon/: Cargo.toml
crates/daemon-cli/: Cargo.toml  cli.yml
crates/daemon-cli/src/: config.rs  main.rs
crates/daemon-core/: Cargo.toml
crates/daemon-core/src/: config.rs  error.rs  lib.rs
crates/daemon/src/: main.rs
crates/daemon/src/lib/: config.rs  error.rs  mod.rs  routes.rs
