[package]
name = "rss_reader_client_cli"
version = "0.1.0"
authors = ["hasezoey <hasezoey@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/hasezoey/rss-reader"

[dependencies]
clap = {version = "2.33.0", features = ["yaml", "wrap_help"]}
flexi_logger = "0.16.2"
log = "0.4.8"
