[package]
name = "rss_reader_daemon_cli"
version = "0.1.0"
authors = ["hasezoey <hasezoey@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/hasezoey/rss-reader"

[dependencies]
clap = {version = "2.33.0", features = ["yaml", "wrap_help"]}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
rss_reader_daemon_core = { path = "../daemon-core" }
flexi_logger = "0.16.2"
log = "0.4.8"
anyhow = "1.0.35"
thiserror = "1.0.22"
