[package]
name = "rss_reader_daemon_core"
version = "0.1.0"
authors = ["hasezoey <hasezoey@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/hasezoey/rss-reader"

[dependencies]
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.35"
thiserror = "1.0.22"
