[package]
name = "rss-reader-daemon"
version = "0.1.0"
authors = ["hasezoey <hasezoey@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/hasezoey/rss-reader"

[dependencies]
log = "0.4.11"
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = "0.8.14"
anyhow = "1.0.35"
thiserror = "1.0.22"
flexi_logger = "0.16.2"
clap = { version = "2.33.3", features = ["yaml", "wrap_help"] }
tokio = { version = "1.0.1", features = ["full"] }
# warp = "0.2.5"
# temporarly using the PR, use normal warp if merged & released
warp = { git = "https://github.com/aknuds1/warp", branch = "chore/upgrade-tokio" }

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "rss-reader-daemon"
path = "src/main.rs"
